--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -6,7 +6,8 @@
   height: 100%;
   box-shadow: 2px 2px 50px rgba(128, 128, 128, 0.589);
   overflow: scroll;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.733);
+  backdrop-filter: blur(2rem);
   h2 {
     padding: 1rem 2rem;
   }
@@ -16,15 +17,17 @@
 }
 
 .library-song {
+  transition: all 0.5s ease;
   cursor: pointer;
   display: flex;
   align-items: center;
   padding: 1rem 2rem;
   img {
     width: 30%;
+    
   }
   &:hover {
-    background-color: rgb(178, 250, 250);
+    background-color: rgba(178, 250, 250, 0.418);
   }
   .song-description {
     padding-left: 1rem;
@@ -60,4 +63,19 @@
 .active-library{
   transform: translateX(0%);
   opacity: 1;
+}
+@media screen and(max-width: 768px){
+  .library{
+    width: 100%;
+  }
+  img{
+    transition: all 0.5s ease;
+  }
+}
+
+@media screen and(min-width: 768px){
+
+  img{
+    transition: all 0.5s ease;
+  }
 }
