--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -3,6 +3,17 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  .tag{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    h6{
+      letter-spacing: 4px;
+      text-transform: uppercase;
+      font-weight: lighter;
+      color: rgb(75, 75, 75);
+    }
+  }
   button {
     background: transparent;
     border: 2px solid rgb(65, 65, 65);
@@ -12,6 +23,14 @@
     &:hover {
       background: rgb(65, 65, 65);
       color: white;
+    }
+  }
+}
+
+@media screen and(max-width: 768px){
+  .nav{
+    button{
+      z-index: 10;
     }
   }
 }
