--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -12,6 +12,7 @@
   input {
     width: 100%;
     padding: 1rem 0;
+    cursor:pointer;
   }
   p {
     padding: 1rem;
@@ -24,5 +25,15 @@
   width: 30%;
   svg {
     cursor: pointer;
+  }
+}
+
+
+@media screen and(max-width: 768px){
+  .time-control{
+    width:90%;
+  }
+  .play-control{
+    width: 60%;
   }
 }
