--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -25,3 +25,9 @@ h4 {
   font-weight: 400;
   color: rgb(63, 63, 63);
 }
+.App{
+  transition: all 0.5s ease;
+}
+.library-active{
+  margin-left:10%;
+}
