--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -6,8 +6,11 @@
   height: 100%;
   box-shadow: 2px 2px 50px rgba(128, 128, 128, 0.589);
   overflow: scroll;
-  background-color: rgba(255, 255, 255, 0.733);
-  backdrop-filter: blur(2rem);
+  background:white;
+ 
+  // backdrop-filter: blur(2rem);
+  
+ 
   h2 {
     padding: 1rem 2rem;
   }
@@ -25,9 +28,10 @@
   img {
     width: 30%;
     
+    
   }
   &:hover {
-    background-color: rgba(178, 250, 250, 0.418);
+    background-color: rgb(178, 250, 250);
   }
   .song-description {
     padding-left: 1rem;
