--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -19,11 +19,16 @@
     border: 2px solid rgb(65, 65, 65);
     cursor: pointer;
     padding: 0.5rem;
-    transition: all 0.3s ease;
+    transition: all 0.5s ease;
+ 
     &:hover {
       background: rgb(65, 65, 65);
       color: white;
     }
+    &:focus{
+      border:2px solid aqua;
+    }
+   
   }
 }
 
